--- a/rancher/haproxy/docker-compose.yml
+++ b/rancher/haproxy/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     restart: always
     hostname: loadbalancing-haproxy
     volumes:
-      - "$PWD/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg"
+      - "haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg"
     ports:
       - "1-21:1-21"
       - "23-65535:23-65535"
