update haproxy config

--- a/rancher/haproxy/haproxy.cfg
+++ b/rancher/haproxy/haproxy.cfg
@@ -24,7 +24,7 @@ defaults
 
 frontend all-http-in
     bind :1-65535
-    default_backend k8s-rancher
-backend k8s-rancher
+    default_backend k8s-rancher-80
+backend k8s-rancher-80
     balance roundrobin
-    server server1 wikipedia.org:1-65535 check
+    server server1 wikipedia.org:80 check
