update haproxy config

--- a/rancher/haproxy/haproxy.cfg
+++ b/rancher/haproxy/haproxy.cfg
@@ -20,9 +20,17 @@ defaults
     timeout http-keep-alive     10s
     timeout check               10s
 
-frontend all-http-in
-    bind :1-65535
+frontend http-80-in
+    bind *:80
     default_backend k8s-rancher-80
+frontend http-443-in
+    bind *:443
+    default_backend k8s-rancher-443
 backend k8s-rancher-80
     balance roundrobin
     server server1 wikipedia.org:80 check
+    server server2 google.com:80 check
+    server server3 yahoo.com:80 check
+backend k8s-rancher-443
+    balance roundrobin
+    server server1 wikipedia.org:443 check
