Update haproxy and compose file

--- a/rancher/haproxy/haproxy.cfg
+++ b/rancher/haproxy/haproxy.cfg
@@ -7,7 +7,7 @@ global
     stats socket /var/lib/haproxy/stats
 
 defaults
-    mode                        tcp
+    mode                        http
     log                         global
     option                      redispatch
     option                      http-server-close
