update haproxy config

--- a/rancher/haproxy/haproxy.cfg
+++ b/rancher/haproxy/haproxy.cfg
@@ -18,6 +18,13 @@ defaults
     timeout server              1m
     timeout http-keep-alive     10s
     timeout check               10s
+    maxconn 3000
+
+    stats enable
+    # option forwardfor
+    # option http-server-close
+    stats uri /haproxyStats             # URL trang thống kê
+    stats auth admin:admin123           # user/pass to access http://localhost/haproxyStats
 
 frontend http-80-in
     bind *:80
